# diffdefo

./: .gitignore  CMakeLists.txt  README.md  compare.ipynb  jax_impl.py  tester.py
src/: main.cpp  param.conf
